# hk-opendata-scraper

./: README.md  pyproject.toml
src/hk_opendata_scraper/: main.py  utils.py
src/hk_opendata_scraper/scraper/: csdi.py  opendata.py
