[project]
name = "hk-opendata-scraper"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Julian Zhu", email = "julianzhu@astri.org"},
]
dependencies = [
    "requests>=2.31.0",
    "furl>=2.1.3",
    "logging>=0.4.9.6",
    "weasyprint>=60.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
